fix: offline ui issue

--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -5,10 +5,8 @@ WORKDIR /var/lib/llmos-ai/llmos-controller
 RUN zypper ar -G https://download.opensuse.org/repositories/utilities/15.6/utilities.repo || true && \
     zypper ref
 
-RUN ARCH=$(uname -m); \
-    [[ "${ARCH}" == "aarch64" ]] && ARCH="arm64"; \
-    zypper --non-interactive install --no-recommends -- git unzip tar gzip && \
-    zypper clean --all && \
+RUN zypper -n in git unzip tar gzip && \
+    zypper -n clean -a && rm -rf /tmp/* /var/tmp/* /usr/share/doc/packages/* && \
     mkdir -p /var/lib/llmos-ai/llmos-controller
 
 # Add dumb-init
@@ -20,14 +18,14 @@ RUN ARCH=$(uname -m); \
 
 ENV UI_VERSION latest
 # also update the api-ui-version in pkg/settings/settings.go when updating the version here.
-ENV API_UI_VERSION 1.1.10
+ENV API_UI_VERSION 1.1.11
 
 RUN mkdir -p /usr/share/llmos-ai/llmos-controller && \
     cd /usr/share/llmos-ai/llmos-controller && \
     curl -sL https://releases.1block.ai/llmos-ui/${UI_VERSION}.tar.gz | tar xvzf - --strip-components=2 && \
     mkdir -p /usr/share/llmos-ai/llmos-controller/api-ui && \
     cd /usr/share/llmos-ai/llmos-controller/api-ui && \
-    curl -sL https://releases.rancher.com/api-ui/${API_UI_VERSION}.tar.gz | tar xvzf - --strip-components=1 && \
+    curl -sL https://releases.1block.ai/api-ui/${API_UI_VERSION}.tar.gz | tar xvzf - --strip-components=1 && \
     cd /var/lib/llmos-ai/llmos-controller
 
 COPY package/entrypoint.sh llmos-controller /usr/bin/
