--- a/deploy/charts/llmos-controller/templates/deployment.yaml
+++ b/deploy/charts/llmos-controller/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
               containerPort: {{ .Values.service.httpsPort }}
               protocol: TCP
             - name: profile
-              containerPort: {{ .Values.service.profile }}
+              containerPort: {{ .Values.service.profilePort }}
               protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
