--- a/deploy/charts/llmos-controller/templates/service.yaml
+++ b/deploy/charts/llmos-controller/templates/service.yaml
@@ -11,5 +11,14 @@ spec:
       targetPort: https
       protocol: TCP
       name: https
+{{- if .Values.service.httpsNodePort }}
+      nodePort: {{ .Values.service.httpsNodePort }}
+{{- end }}
+{{- if .Values.service.profilePort }}
+    - port: {{ .Values.service.profilePort }}
+      targetPort: profile
+      protocol: TCP
+      name: profile
+{{- end }}
   selector:
     {{- include "llmos-controller.selectorLabels" . | nindent 4 }}
