feat: add external db and chat api

--- a/deploy/charts/llmos-controller/Chart.yaml
+++ b/deploy/charts/llmos-controller/Chart.yaml
@@ -28,3 +28,7 @@ dependencies:
     version: 0.1.0
     repository: "file://dependency_charts/ollama"
     condition: ollama.enabled
+  - name: postgresql
+    version: 15.5.5
+    repository: https://charts.bitnami.com/bitnami
+    condition: postgresql.enabled
