--- a/deploy/charts/llmos-controller/dependency_charts/ollama/values.yaml
+++ b/deploy/charts/llmos-controller/dependency_charts/ollama/values.yaml
@@ -8,6 +8,7 @@ image:
 
 nameOverride: ""
 fullnameOverride: ""
+depNameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
