--- a/deploy/charts/llmos-controller/templates/serviceaccount.yaml
+++ b/deploy/charts/llmos-controller/templates/serviceaccount.yaml
@@ -1,13 +1,13 @@
-{{- if .Values.serviceAccount.create -}}
+{{- if .Values.controller.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "llmos-controller.serviceAccountName" . }}
   labels:
     {{- include "llmos-controller.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+  {{- with .Values.controller.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
+automountServiceAccountToken: {{ .Values.controller.serviceAccount.automount }}
 {{- end }}
