--- a/deploy/charts/llmos-controller/templates/tests/test-connection.yaml
+++ b/deploy/charts/llmos-controller/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "llmos-controller.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "llmos-controller.fullname" . }}:{{ .Values.controller.service.httpsPort }}']
   restartPolicy: Never
