--- a/deploy/charts/llmos-controller/values.yaml
+++ b/deploy/charts/llmos-controller/values.yaml
@@ -42,7 +42,7 @@ fullnameOverride: ""
 depNameOverride: &depNameOverride "llmos"
 
 controller:
-  replicaCount: 1
+  replicaCount: 0
 
   image:
     repository: ghcr.io/llmos-ai/llmos-controller
@@ -59,7 +59,7 @@ controller:
     annotations: {}
     # The name of the service account to use.
     # If not set and create is true, a name is generated using the fullname template
-    name: ""
+    name: &llmosServiceAccountName "llmos-cluster-admin"
 
   podAnnotations: {}
   podLabels: {}
@@ -106,27 +106,26 @@ controller:
 
   affinity: {}
 
-postgresql:
-  enabled: true
-  image:
-    repository: bitnami/postgresql
-    tag: 16.3.0-debian-12-r14
-    pullPolicy: IfNotPresent
-  fullnameOverride: "llmos-postgresql"
-  primary:
-    resources:
-      limits:
-        cpu: 2
-        memory: 4Gi
-      requests:
-        cpu: 200m
-        memory: 256Mi
-    persistence:
-      enabled: true
-      accessModes:
-        - ReadWriteOnce
-      size: 5Gi
-
+#postgresql:
+#  enabled: true
+#  image:
+#    repository: bitnami/postgresql
+#    tag: 16.3.0-debian-12-r14
+#    pullPolicy: IfNotPresent
+#  fullnameOverride: "llmos-postgresql"
+#  primary:
+#    resources:
+#      limits:
+#        cpu: 2
+#        memory: 4Gi
+#      requests:
+#        cpu: 200m
+#        memory: 256Mi
+#    persistence:
+#      enabled: true
+#      accessModes:
+#        - ReadWriteOnce
+#      size: 5Gi
 
 suc:
   enabled: true
@@ -163,3 +162,41 @@ ollama:
     hostPath: "/var/lib/llmos/ollama"
     storageSize: "10Gi"
     storageClassName: "local-path"
+
+kuberay-operator:
+  enabled: true
+  image:
+    repository: quay.io/kuberay/operator
+    tag: v1.1.1
+    pullPolicy: IfNotPresent
+  batchScheduler:
+    enabled: false
+  serviceAccount:
+    create: false
+    name: *llmosServiceAccountName
+
+redis:
+  enabled: true
+  image:
+    repository: bitnami/redis
+    tag: 7.2.5-debian-12-r2
+    pullPolicy: IfNotPresent
+  master:
+    persistence:
+      enabled: true
+      storageClass: ""
+      accessModes:
+        - ReadWriteOnce
+      size: 5Gi
+  replica:
+    replicaCount: 3
+    persistence:
+      enabled: true
+      storageClass: ""
+      accessModes:
+        - ReadWriteOnce
+      size: 5Gi
+  auth:
+    enabled: true
+    sentinel: true
+    password: ""
