--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,6 +16,7 @@ issues:
         - gosimple
         - gocyclo
         - unparam
+        - typecheck
     - path: "cmd/*"
       linters:
         - lll
