ci: update webhook ci & mirror chart fix

--- a/deploy/charts/llmos-controller/templates/deployment.yaml
+++ b/deploy/charts/llmos-controller/templates/deployment.yaml
@@ -33,7 +33,7 @@ spec:
           securityContext:
             {{- toYaml .Values.controller.securityContext | nindent 12 }}
           image: "{{ .Values.controller.image.repository }}:{{ .Values.controller.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.global.imagePullPolicy }}
+          imagePullPolicy: {{ .Values.controller.image.pullPolicy }}
           ports:
             - name: https
               containerPort: {{ .Values.controller.service.httpsPort }}
