--- a/deploy/charts/llmos-controller/values.yaml
+++ b/deploy/charts/llmos-controller/values.yaml
@@ -19,24 +19,6 @@ global:
   ##
   storageClass: ""
 
-  ## @param global.postgresql Global configuration for PostgreSQL
-  postgresql:
-    auth:
-      postgresPassword: ""
-      username: "root"
-      database: "llmos"
-      password: ""
-      replicationPassword: ""
-      existingSecret: "llmos-db-credentials"
-      secretKeys:
-        adminPasswordKey: "pg-admin-password"
-        userPasswordKey: "pg-password"
-        replicationPasswordKey: "pg-replica-password"
-    service:
-      ports:
-        postgresql: "5432"
-
-
 nameOverride: ""
 fullnameOverride: ""
 depNameOverride: &depNameOverride "llmos"
@@ -49,14 +31,6 @@ controller:
     pullPolicy: Always
     # Overrides the image tag whose default is the chart appVersion.
     tag: "main"
-
-  webhook:
-    replicaCount: 1
-    image:
-      repository: ghcr.io/llmos-ai/llmos-controller-webhook
-      pullPolicy: Always
-      # Overrides the image tag whose default is the chart appVersion.
-      tag: "main"
 
   serviceAccount:
     # Specifies whether a service account should be created
@@ -87,6 +61,43 @@ controller:
     type: NodePort
     httpsPort: 8443
     httpsNodePort: 30443
+    profilePort: 6060
+
+  resources:
+    requests:
+      cpu: 200m
+      memory: 250Mi
+
+  # Additional volumes on the output Deployment definition.
+  volumes: []
+
+  # Additional volumeMounts on the output Deployment definition.
+  volumeMounts: []
+
+  nodeSelector: {}
+
+  tolerations:
+    - key: CriticalAddonsOnly
+      operator: Exists
+    - effect: NoSchedule
+      key: node-role.kubernetes.io/master
+      operator: Exists
+    - effect: NoSchedule
+      key: node-role.kubernetes.io/control-plane
+      operator: Exists
+
+  affinity: {}
+
+webhook:
+  replicaCount: 1
+  image:
+    repository: ghcr.io/llmos-ai/llmos-controller-webhook
+    pullPolicy: Always
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: "main"
+
+  service:
+    type: ClusterIP
     webhookPort: 8444
     profilePort: 6060
 
