--- a/deploy/charts/llmos-controller/templates/service.yaml
+++ b/deploy/charts/llmos-controller/templates/service.yaml
@@ -23,3 +23,24 @@ spec:
 {{- end }}
   selector:
     {{- include "llmos-controller.selectorLabels" . | nindent 4 }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "llmos-controller.fullname" . }}-webhook
+  labels:
+    {{- include "llmos-controller.webhookLabels" . | nindent 4 }}
+    foo: bar
+spec:
+  type: {{ .Values.webhook.service.type }}
+  ports:
+    - port: 443
+      targetPort: webhook
+      protocol: TCP
+      name: webhook
+    - port: {{ .Values.controller.service.profilePort }}
+      targetPort: profile
+      protocol: TCP
+      name: profile
+  selector:
+    {{- include "llmos-controller.webhookSelectorLabels" . | nindent 4 }}
