feat: add gpu operator chart

--- a/deploy/charts/llmos-operator/values.yaml
+++ b/deploy/charts/llmos-operator/values.yaml
@@ -205,3 +205,10 @@ redis:
     enabled: true
     sentinel: true
     password: ""
+  volumePermissions:
+    enabled: true
+
+gpu-operator:
+  enable: true
+  driver:
+    enabled: true
