--- a/deploy/charts/llmos-operator/Chart.yaml
+++ b/deploy/charts/llmos-operator/Chart.yaml
@@ -24,6 +24,13 @@ version: 0.1.0
 appVersion: "0.1.0"
 
 dependencies:
+  - name: gpu-operator
+    version: 24.3.0
+    repository: https://helm.ngc.nvidia.com/nvidia
+    condition: gpu-operator.enabled
+    tags:
+      - gpu-operator
+      - nvidia
   - name: ollama
     version: 0.1.0
     repository: "file://dependency_charts/ollama"
