--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,23 +25,19 @@ jobs:
       uses: docker/setup-buildx-action@v3
       with:
         buildkitd-flags: --debug
-    - name: Get ref_name
-      id: get_ref_name
-      run: |
-        if [ "${{ github.event_name }}" == "pull_request" ]; then
-          echo "ref_name=${{ github.base_ref }}"
-          echo "ref_name=${{ github.base_ref }}" >> $GITHUB_OUTPUT || exit 1
-        else
-          echo "ref_name=${{ github.ref_name }}"
-          echo "ref_name=${{ github.ref_name }}" >> $GITHUB_OUTPUT || exit 1
-        fi
-    - run: make test
-    - name: Run GoReleaser
-      uses: goreleaser/goreleaser-action@v5
+    - run: make test && make lint
+    - name: Install GoReleaser
+      uses: goreleaser/goreleaser-action@v6
       with:
         distribution: goreleaser
         version: latest
-        args: release --clean --snapshot
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        VERSION: ${{ steps.get_ref_name.outputs.ref_name }}
+        install-only: true
+    - name: Build GoReleaser
+      run: make build-operator
+    - name: Setup Earthly
+      uses: earthly/actions-setup@v1
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        version: "latest"
+    - name: Run Installer image test
+      run: make build-installer
