--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,9 +1,10 @@
-version: 1
+version: 2
 
 env:
-  - REGISTRY={{ if index .Env "REGISTRY"  }}{{ .Env.REGISTRY }}{{ else }}ghcr.io/llmos-ai{{ end }}
+  - REGISTRY={{ if index .Env "REGISTRY"  }}{{ .Env.REGISTRY }}{{ end }}
   - BUILDER={{ if index .Env "BUILDER"  }}{{ .Env.BUILDER }}{{ else }}default{{ end }}
-  - VERSION={{ if index .Env "VERSION"  }}{{ .Env.VERSION }}{{ else }}v0.0.0-dev{{ end }}
+  - VERSION={{ if index .Env "VERSION"  }}{{ .Env.VERSION }}{{ end }}
+  - COMMIT={{ if index .Env "COMMIT"  }}{{ .Env.COMMIT }}{{ end }}
 
 snapshot:
   # https://goreleaser.com/customization/snapshots/
@@ -18,6 +19,8 @@ builds:
     binary: llmos-operator
     env:
       - CGO_ENABLED=0
+      - VERSION={{ .Env.VERSION }}
+      - COMMIT={{ .Env.COMMIT }}
     goos:
       - linux
       - darwin
@@ -30,7 +33,7 @@ builds:
       - -s
       - -w
       - -X "github.com/llmos-ai/llmos-operator/version/version.Version={{ .Env.VERSION }}"
-      - -X "github.com/llmos-ai/llmos-operator/version/version.Commit={{ .Version }}"
+      - -X "github.com/llmos-ai/llmos-operator/version/version.Commit={{ .Env.COMMIT }}"
 
 changelog:
   use: github
@@ -50,6 +53,7 @@ dockers:
     build_flag_templates:
       - "--builder={{ .Env.BUILDER }}"
       - "--pull"
+      - "--build-arg=REGISTRY={{ .Env.REGISTRY }}"
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
@@ -58,6 +62,7 @@ dockers:
       - "--platform=linux/amd64"
     extra_files:
       - package/entrypoint.sh
+      - scripts
 
   - use: buildx
     goos: linux
@@ -68,6 +73,7 @@ dockers:
     build_flag_templates:
       - "--builder={{ .Env.BUILDER }}"
       - "--pull"
+      - "--build-arg=REGISTRY={{ .Env.REGISTRY }}"
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
@@ -76,6 +82,7 @@ dockers:
       - "--platform=linux/arm64"
     extra_files:
       - package/entrypoint.sh
+      - scripts
 
   - use: buildx
     goos: linux
@@ -86,6 +93,7 @@ dockers:
     build_flag_templates:
       - "--builder={{ .Env.BUILDER }}"
       - "--pull"
+      - "--build-arg=REGISTRY={{ .Env.REGISTRY }}"
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
@@ -94,6 +102,7 @@ dockers:
       - "--platform=linux/amd64"
     extra_files:
       - package/entrypoint-webhook.sh
+      - scripts
 
   - use: buildx
     goos: linux
@@ -104,6 +113,7 @@ dockers:
     build_flag_templates:
       - "--builder={{ .Env.BUILDER }}"
       - "--pull"
+      - "--build-arg=REGISTRY={{ .Env.REGISTRY }}"
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
@@ -112,6 +122,7 @@ dockers:
       - "--platform=linux/arm64"
     extra_files:
       - package/entrypoint-webhook.sh
+      - scripts
 
 docker_manifests:
   - use: docker
