--- a/deploy/charts/llmos-crd/Chart.yaml
+++ b/deploy/charts/llmos-crd/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: llmos-crd
-description: A Helm chart for deploying llmos-operator CRDs
+description: A Helm chart for deploying LLMOS-Operator CRDs
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,10 +15,16 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 0.1.0-dev
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.1.0"
+appVersion: "0.1.0-app.dev"
+
+keywords:
+  - LLMOS
+home: https://github.com/llmos-ai/llmos
+sources:
+  - https://github.com/llmos-ai/llmos-operator
