--- a/deploy/charts/llmos-operator/Chart.yaml
+++ b/deploy/charts/llmos-operator/Chart.yaml
@@ -15,26 +15,22 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 0.1.0-dev
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.1.0"
+appVersion: "0.1.0-app.dev"
+
+keywords:
+  - llmos
+  - llmos-operator
+home: https://github.com/llmos-ai/llmos
+sources:
+  - https://github.com/llmos-ai/llmos-operator
 
 dependencies:
-  - name: gpu-operator
-    version: 24.3.0
-    repository: https://helm.ngc.nvidia.com/nvidia
-    condition: gpu-operator.enabled
-    tags:
-      - gpu-operator
-      - nvidia
-  - name: ollama
-    version: 0.1.0
-    repository: "file://dependency_charts/ollama"
-    condition: ollama.enabled
   - name: kuberay-operator
     version: "1.1.1"
     repository: "https://ray-project.github.io/kuberay-helm"
