--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -15,6 +15,7 @@ permissions:
 
 env:
   REGISTRY: ${{ vars.REGISTRY || 'ghcr.io/llmos-ai' }}
+  DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY || 'docker.io/llmosai' }}
 
 jobs:
   main-release:
@@ -33,12 +34,12 @@ jobs:
       uses: docker/setup-buildx-action@v3
       with:
         buildkitd-flags: --debug
-    - name: Login to GitHub Container Registry
+    - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        registry: docker.io
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - run: make test && make lint
     - name: Install GoReleaser
       uses: goreleaser/goreleaser-action@v6
@@ -57,10 +58,16 @@ jobs:
         version: "latest"
     - name: Build Installer Image
       run: make package-installer
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Push Latest(main) Docker Images
       run: |
         . ./scripts/version
-        IMAGES=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep llmos-operator:${VERSION})
+        IMAGES=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep /llmos-operator:${VERSION})
         for i in ${IMAGES}; do
           docker push $i
         done
@@ -71,7 +78,7 @@ jobs:
     - name: Push Latest(main) Webhook Images
       run: |
         . ./scripts/version
-        WEBHOOK_IMAGES=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep llmos-operator-webhook:${VERSION})
+        WEBHOOK_IMAGES=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep /llmos-operator-webhook:${VERSION})
         for i in ${WEBHOOK_IMAGES}; do
           docker push $i
         done
