--- a/deploy/charts/system-charts/Chart.yaml
+++ b/deploy/charts/system-charts/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: llmos-operator
-description: A Helm chart for LLMOS Operator
+name: system-charts
+description: This is just a placeholder chart that contains a list of system charts required by the llmos-operator.
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,17 +15,41 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0-dev
+version: 0.1.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.1.0-app.dev"
-
-keywords:
-  - llmos
-  - llmos-operator
-home: https://github.com/llmos-ai/llmos
-sources:
-  - https://github.com/llmos-ai/llmos-operator
+appVersion: "0.1.0"
+dependencies:
+  - name: kuberay-operator
+    version: "1.1.1"
+    repository: "https://ray-project.github.io/kuberay-helm"
+    tags:
+      - ml-framework
+      - ray.io
+  - name: gpu-operator
+    version: "v24.6.0"
+    repository: "https://helm.ngc.nvidia.com/nvidia"
+    tags:
+      - gpu-operator
+      - nvidia
+  - name: rook-ceph
+    version: v1.14.9
+    repository: https://charts.rook.io/release
+    tags:
+      - rook
+      - ceph
+  - name: rook-ceph-cluster
+    version: v1.14.9
+    repository: https://charts.rook.io/release
+    tags:
+      - rook
+      - ceph-cluster
+  - name: redis
+    version: 19.6.4
+    repository: https://charts.bitnami.com/bitnami
+    condition: redis.enabled
+    tags:
+      - redis
