--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -8,6 +8,7 @@ on:
   push:
     branches:
     - main
+    - release-*
 
 permissions:
   contents: write
@@ -34,6 +35,12 @@ jobs:
       uses: docker/setup-buildx-action@v3
       with:
         buildkitd-flags: --debug
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -56,14 +63,10 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         version: "latest"
+    - name: Build system-charts repo Image
+      run: make package-system-charts-repo
     - name: Build Installer Image
       run: make package-installer
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Push Latest(main) Docker Images
       run: |
         . ./scripts/version
