--- a/pkg/template/templates/addons/kuberay-operator.yaml
+++ b/pkg/template/templates/addons/kuberay-operator.yaml
@@ -3,8 +3,9 @@ kind: ManagedAddon
 metadata:
   name: kuberay-operator
   namespace: llmos-system
+  labels:
+    llmos.ai/system-addon: "true"
 spec:
-#  repo: https://ray-project.github.io/kuberay-helm
   repo: http://system-charts-repo.llmos-system.svc
   chart: kuberay-operator
   version: 1.1.1
